added temporary files for web ui

--- a/templates/validate_user.html
+++ b/templates/validate_user.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
 </head>
 <body>
 
-<body>
 
-<form action="/uploader" method="POST"
+
+<form action="/validator" method="POST"
       enctype="multipart/form-data">
-     Register User <br>
+    Validate User <br>
     name: <input type="text" name="user_name"><br>
     <input type="file" name="file"/><br>
     <input type="submit"/><br>
-
 </form>
-
-</body>
-
 
 </body>
 </html>
