--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -10,7 +10,12 @@
 <form action="/uploader" method="POST"
       enctype="multipart/form-data">
      Register User <br>
-    name: <input type="text" name="user_name"><br>
+    name: <input type="text" name="name"><br>
+    age: <input type="text" name="age"><br>
+    city: <input type="text" name="city"><br>
+    state: <input type="text" name="state"><br>
+    zip: <input type="text" name="zip"><br>
+    phone: <input type="text" name="phone"><br>
     <input type="file" name="file"/><br>
     <input type="submit"/><br>
 
