--- a/app/templates/validate_user.html
+++ b/app/templates/validate_user.html
@@ -35,14 +35,14 @@
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
                 <a href="#">
-                    Start Bootstrap
+                    Deep Recognition
                 </a>
             </li>
             <li>
-                <a href="#">Dashboard</a>
+                <a href="register_user.html">Register</a>
             </li>
             <li>
-                <a href="#">Shortcuts</a>
+                <a href="validate_user.html">Validate</a>
             </li>
             <li>
                 <a href="#">Overview</a>
