update html structure

--- a/app/templates/register_user.html
+++ b/app/templates/register_user.html
@@ -12,10 +12,10 @@
     <title>Simple Sidebar - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/styles/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../static/styles/css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,10 +39,10 @@
                 </a>
             </li>
             <li>
-                <a href="register_user.html">Register</a>
+                <a href="register_user">Register</a>
             </li>
             <li>
-                <a href="validate_user.html">Validate</a>
+                <a href="validate_user">Validate</a>
             </li>
         </ul>
     </div>
@@ -99,10 +99,10 @@
 <!-- /#wrapper -->
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="../static/styles/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="../static/styles/js/bootstrap.min.js"></script>
 
 <!-- Menu Toggle Script -->
 <!--<script>
