--- a/app/templates/validate_user.html
+++ b/app/templates/validate_user.html
@@ -57,9 +57,24 @@
                     <form action="/validator" method="POST"
                           enctype="multipart/form-data">
                         <br>
-                        name: <input type="text" name="user_name"><br>
+						<table style="width: 100%">
+						<tr>
+                        <th>Name: <input type="text" name="user_name"><br> </th>
+						</tr>
+						</table>
+						<br>
+						<table>
+						<tr>
+						<th>
                         <input type="file" name="file"/><br>
+						</th>
+						</tr>
+						<tr>
+						<th>
                         <input type="submit"/><br>
+						<th>
+						</tr>
+						</table>
                     </form>
                     <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>-->
                 </div>
