updated validation methods;  removed svm

--- a/app/templates/validate_user.html
+++ b/app/templates/validate_user.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Deep-Recognition - Validate User</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../static/styles/css/bootstrap.min.css" rel="stylesheet">
